import SwiftUI

struct ProfileView: View {
    var body: some View {
        NavigationView {
            Text("Profile Screen")
                .navigationTitle("Your Sancho Profile")
        }
    }
}

#Preview {
    ProfileView()
}
